maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: value ==- is not a member of Int
    if(somme==4 || somme==-4){avance()}
                        ^Escaper:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if(somme==4 || somme==-4){avance()}
                                    ^Escaper:12: error: value +=- is not a member of Int
        somme+=-1
             ^